--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ getrandom = { version = "0.2", features = ["js"] }
 rand = "0.8.5"
 yew = { version = "0.20.0", features = ["csr"] }
 yew-router = "0.17"
+wasm-bindgen = "0.2.87"
+web-sys = "0.3.64"
 
 [profile.release]
 panic = "abort"
